fix(#21): fix issues